refactor: removendo imports nao usados e field injection
refatorando as classes com auxílio do sonarcube, removendo alguns imports não utilizados e trocando fieldinjector por construtores